# Add applications
ADD_SUBDIRECTORY(InterfaceCOLMAP)
ADD_SUBDIRECTORY(InterfaceMetashape)
ADD_SUBDIRECTORY(InterfaceMVSNet)
ADD_SUBDIRECTORY(InterfacePolycam)
ADD_SUBDIRECTORY(DensifyPointCloud)
ADD_SUBDIRECTORY(ReconstructMesh)
ADD_SUBDIRECTORY(RefineMesh)
ADD_SUBDIRECTORY(TextureMesh)
ADD_SUBDIRECTORY(TransformScene)
ADD_SUBDIRECTORY(Viewer)
if(OpenMVS_ENABLE_TESTS)
    ADD_SUBDIRECTORY(Tests)
endif()
