cxx_executable_with_flags_no_pch(InterfaceOpenMVG "Apps" "${cxx_default}" "MVS" InterfaceOpenMVG.cpp)
if(OpenMVS_USE_BREAKPAD AND BREAKPAD_FOUND)
	target_link_libraries(InterfaceOpenMVG ${BREAKPAD_LIBS})
endif()

FIND_PACKAGE(OpenMVG QUIET)
IF (OPENMVG_FOUND)
	INCLUDE_DIRECTORIES(${OPENMVG_INCLUDE_DIRS})
	cxx_executable_with_flags_no_pch(InterfaceOpenMVG2 "Apps" "${cxx_default}" "MVS;${OPENMVG_LIBRARIES}" InterfaceOpenMVG2.cpp)
	if(OpenMVS_USE_BREAKPAD AND BREAKPAD_FOUND)
		target_link_libraries(InterfaceOpenMVG2 ${BREAKPAD_LIBS})
	endif()
ELSE()
	MESSAGE("OPENMVG_NOT FOUND : OpenMVG importer will not be build")
ENDIF()
